--- a/FinalCitasMedicas/FinalCitasMedicas/Views/Especialidad/Delete.cshtml
+++ b/FinalCitasMedicas/FinalCitasMedicas/Views/Especialidad/Delete.cshtml
@@ -10,11 +10,10 @@
 
 
 <div>
-    <h4>Detalle Especialidad</h4>
+    <h3>Detalle Especialidad</h3>
 
-    <div>
-        <p> Nombre : @Html.TextBoxFor(model => model.nombreEspecialidad)</p>
-
+    <div class="container-fluid">
+        <h4> Nombre : @Model.nombreEspecialidad</h4>
     </div>
     <hr style="border-width: 5px;" />
 
