--- a/FinalCitasMedicas/FinalCitasMedicas/Views/Paciente/Index.cshtml
+++ b/FinalCitasMedicas/FinalCitasMedicas/Views/Paciente/Index.cshtml
@@ -8,8 +8,11 @@
 <hr style="border-width: 5px;" />
 
 <h3>Pacientes Registrados</h3>
+<div>
+    <img src="~/Imagen/man.png" style="height:100px;width:100px;" />
+</div>
+<h3>   </h3>
 
-@*@Html.ActionLink("Crear Paciente", "New", "Paciente")*@
 <button type="button" onclick="location.href='@Url.Action("New", "Paciente")'">
     Nuevo Paciente
 </button>
