--- a/FinalCitasMedicas/FinalCitasMedicas/Views/Shared/_Layout.cshtml
+++ b/FinalCitasMedicas/FinalCitasMedicas/Views/Shared/_Layout.cshtml
@@ -26,13 +26,11 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Doctores", "Index", "Doctor")</li>
                     <li>@Html.ActionLink("Pacientes", "Index", "Paciente")</li>
                     <li>@Html.ActionLink("Centros", "Index", "Centro")</li>
                     <li>@Html.ActionLink("Especialidades", "Index", "Especialidad")</li>
+                    <li>@Html.ActionLink("Citas", "Index", "Cita")</li>
 
                 </ul>
             </div>
@@ -43,6 +41,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <span > Proyecto Final de Base de Datos I</span>
         </footer>
     </div>
 
