--- a/FinalCitasMedicas/FinalCitasMedicas/Views/Home/Index.cshtml
+++ b/FinalCitasMedicas/FinalCitasMedicas/Views/Home/Index.cshtml
@@ -3,29 +3,42 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <hr /> 
+    <h1 style="text-align:center">CIMEDI</h1>
+    <p class="lead" style="text-align:center">
+        Software para gestionar las citas médicas de los pacientes y mostrar la disponibilidad
+    </p>
+    <hr />
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <h3>   </h3>
+        <h2 style="font-weight: bold">Equipo de Desarrollo</h2>
+        <ul style="font-size: 23px">
+            <li>Gabriel Mendez Reyes |</li>
+            <li>Gerzon Zorrilla |</li>
+            <li>Eduardo Calderon |</li>
+        </ul>
+
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <section>
+            <div class="row">
+                <img class="img-responsive center-block" src="~/Imagen/Logo.JPG" style="height:300px;width:300px;" />
+            </div>
+        </section>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h3>   </h3>
+        <h2 style="font-weight: bold">Materia</h2>
+        <ul style="font-size: 23px">
+            <li>Base de Datos I</li>
+        </ul>
+
+        <h2 style="font-weight: bold">Profesor</h2>
+        <ul style="font-size: 23px">
+            <li>Joel Francis Jimenez Baez </li>
+        </ul>
     </div>
 </div>
